tests/baselines/reference/parserAccessors1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors1.ts (1 errors) ====
    class C {
        get Foo() { }
            ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
    }